# SnakeNBT

./: LICENSE.md  README.md  pyproject.toml  snakenbt.py
